Render Multiple Elements

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script>
-        const name = React.createElement('h1',null,"Shahid");
+        const firstName = React.createElement('h1',null,"Shahid");
+        const midName = React.createElement('h1',null,"Aktar");
+        const lastName = React.createElement('h1',null,"Mir");
+        const fullName = React.createElement('div',null,[firstName,midName,lastName]); 
+
         const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(name);
+        root.render(fullName);
     </script>
 </body>
 </html>
