--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
     <div id="root">Not Render</div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script>
-        const firstName = React.createElement('h1',null,"Shahid");
-        const midName = React.createElement('h1',null,"Aktar");
-        const lastName = React.createElement('h1',null,"Mir");
-        const fullName = React.createElement('div',null,[firstName,midName,lastName]); 
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(fullName);
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
