--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Document</title>
 </head>
 <body>
     <div id="root">Not Render</div>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="/src/app.js"></script>
 </body>
 </html>
